Finish up population

--- a/working.ipynb
+++ b/working.ipynb
@@ -9,7 +9,7 @@
     "#import dependenceis\n",
     "import pandas as pd\n",
     "import sqlalchemy\n",
-    "from sqlalchemy import inspect, create_engine\n",
+    "from sqlalchemy import inspect, create_engine, select\n",
     "import numpy as np\n",
     "import psycopg2"
    ]
@@ -301,7 +301,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Use melt to transpose certain columns\n",
+    "population_df = pd.read_csv(\"../project_2_whats_for_breakfast/data/pop1.csv\")\n",
+    "population_df.copy()\n",
+    "population_df = population_df.rename(columns={'Country Name':'country', 'Country Code':'country_code'})\n",
+    "population_df\n",
+    "population_df.dropna(how='any')\n",
+    "population = pd.merge(population_df, countries_df, how='inner', on='country')\n",
+    "population\n",
+    "\n",
+    "population = population.melt(\n",
+    "    id_vars=['country', 'country_code_x'], value_vars=['1980', '1985', '1990', '1995', '2000', '2005', '2010', '2015', '2020'], \\\n",
+    "        var_name='year', value_name='population'\n",
+    ")\n",
+    "population = population.rename(columns={'country_code_x':'country_code'})\n",
+    "population = population.dropna(how='any')\n",
+    "\n",
+    "population.to_sql(name='tbl_population', con=engine, if_exists='append', index=False)"
+   ]
   }
  ],
  "metadata": {
