--- a/working.ipynb
+++ b/working.ipynb
@@ -10,8 +10,9 @@
     "import pandas as pd\n",
     "import sqlalchemy\n",
     "from sqlalchemy import inspect, create_engine, select\n",
-    "import numpy as np"
-<<<<<<< Updated upstream
+    "import numpy as np\n",
+    "import psycopg2\n",
+    "import os"
    ]
   },
   {
@@ -19,8 +20,6 @@
    "metadata": {},
    "source": [
     "### Import Countries From URL"
-=======
->>>>>>> Stashed changes
    ]
   },
   {
@@ -91,13 +90,7 @@
     "trim_crops = crops.loc[(crops['Year']>1979)]\n",
     "trim_crops.to_csv(\"../project_2_whats_for_breakfast/data/trimmed_crops.csv\")\n",
     "trimmed_crops_df = trim_crops.copy()\n",
-<<<<<<< Updated upstream
-
-    "trimmed_crops_df.head()"
-
-=======
-    "trimmed_crops_df.head()"
->>>>>>> Stashed changes
+    "trimmed_crops_df.head()\n"
    ]
   },
   {
@@ -123,7 +116,7 @@
     "crop_items = trimmed_crops_df[['Item', 'Element']].copy()\n",
     "crop_items_dim = pd.DataFrame(crop_items, columns=['Item', 'Element'])\n",
     "crop_items_dim = crop_items_dim.drop_duplicates()\n",
-    "crop_items_dim"
+    "crop_items_dim\n"
    ]
   },
   {
@@ -172,16 +165,7 @@
     "year = trim_crops['Year']\n",
     "year = year.drop_duplicates()\n",
     "year = pd.DataFrame(year, columns=['Year'])\n",
-    "year.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "year.dtypes"
+    "year.head()"
    ]
   },
   {
@@ -204,7 +188,7 @@
     "port = 5432\n",
     "db_name = 'captain_crunch'\n",
     "rds_connection_string = f'{protocol}://{username}:{password}@{host}:{port}/{db_name}'\n",
-    "engine = create_engine(rds_connection_string)"
+    "engine = create_engine(rds_connection_string)\n"
    ]
   },
   {
@@ -238,28 +222,10 @@
    "outputs": [],
    "source": [
     "# Push Year to tbl_year\n",
-<<<<<<< Updated upstream
-
-=======
->>>>>>> Stashed changes
-    "year.rename(columns={'Year':'year'}, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-<<<<<<< Updated upstream
-
     "\n",
     "year.rename(columns={'Year':'year'}, inplace=True)\n",
     "\n",
-
-=======
     "year.to_sql(name='tbl_year', con=engine, if_exists='append', index=False)"
->>>>>>> Stashed changes
    ]
   },
   {
@@ -283,24 +249,8 @@
    "outputs": [],
    "source": [
     "# Push Item to tbl_item\n",
-<<<<<<< Updated upstream
-
-=======
->>>>>>> Stashed changes
-    "items_dimension.rename(columns={'Item_name':'item_name', 'Element':'item_type'}, inplace=True)\n",
-    "items_dimension"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-<<<<<<< Updated upstream
-
-=======
->>>>>>> Stashed changes
+    "items_dimension.rename(columns={'Item':'item_name', 'Element':'item_type'}, inplace=True)\n",
+    "items_dimension\n",
     "items_dimension.to_sql(name='tbl_item', con=engine, if_exists='append', index=False)"
    ]
   },
@@ -311,7 +261,7 @@
    "outputs": [],
    "source": [
     "# Adjust countries_df\n",
-    "countries_df = countries_df.rename(columns={'Country or Area':'country', 'ISO-alpha3 Code':'country_code', 'Region 1':'region', 'Continent':'continent'})\n",
+    "countries_df.rename(columns={'Country or Area':'country', 'ISO-alpha3 Code':'country_code', 'Region 1':'region', 'Continent':'continent'}, inplace=True)\n",
     "countries_df = countries_df[['country', 'country_code', 'region', 'continent']]\n",
     "countries_df"
    ]
@@ -359,32 +309,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-<<<<<<< Updated upstream
-
-=======
->>>>>>> Stashed changes
-    "#As the columns of the population dataframe are strings, in order to melt the years we want, we create a list from the\n",
-    "## year dataframe year column, convert that to a string, and use that in our .melt method \n",
-    "year_list = year['year'].values.tolist()\n",
-    "year_str = [str(i) for i in year_list]"
-<<<<<<< Updated upstream
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Use melt to transpose certain columns\n",
-
+    "# Tidy up Population\n",
     "population_df = pd.read_csv(\"../project_2_whats_for_breakfast/data/pop1.csv\")\n",
     "population_df.copy()\n",
     "population_df.rename(columns={'Country Name':'country', 'Country Code':'country_code'}, inplace=True)\n",
     "population = pd.merge(population_df, countries_df, how='inner', on='country')\n",
     "population"
-=======
->>>>>>> Stashed changes
    ]
   },
   {
@@ -394,26 +324,12 @@
    "outputs": [],
    "source": [
     "# Use melt to transpose certain columns\n",
-    "population_df = pd.read_csv(\"../project_2_whats_for_breakfast/data/pop1.csv\")\n",
-    "population_df.copy()\n",
-    "population_df = population_df.rename(columns={'Country Name':'country', 'Country Code':'country_code'})\n",
-    "population_df\n",
-    "population_df.dropna(how='any')\n",
-    "population = pd.merge(population_df, countries_df, how='inner', on='country')\n",
+    "population.rename(columns={'country_code_x':'country_code'}, inplace=True)\n",
     "population\n",
-<<<<<<< Updated upstream
-
-=======
->>>>>>> Stashed changes
-    "\n",
-    "population = population.melt(\n",
-    "    id_vars=['country', 'country_code_x'], value_vars=year_str, \\\n",
-    "        var_name='year', value_name='population'\n",
-    ")\n",
-    "population = population.rename(columns={'country_code_x':'country_code'})\n",
-    "population = population.dropna(how='any')"
-<<<<<<< Updated upstream
-=======
+    "# population = population.melt(\n",
+    "#         id_vars=['country', 'country_code'], value_vars=None, var_name='year', value_name='population'\n",
+    "#     )\n",
+    "# population\n"
    ]
   },
   {
@@ -422,69 +338,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Convert the years into int in preperation for database loading. \n",
-    "population['year']=population['year'].astype(int)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "population.loc[(population['year']==1984)]"
->>>>>>> Stashed changes
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-<<<<<<< Updated upstream
-    "#Convert the years into int in preperation for database loading. \n",
-    "population['year']=population['year'].astype(int)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "population.loc[(population['year']==1984)]"
-
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-
     "#Push Population to tbl_population\n",
     "\n",
-
-=======
->>>>>>> Stashed changes
     "population.to_sql(name='tbl_population', con=engine, if_exists='append', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PythonData38",
+   "display_name": "Python 3.8.13 ('Python38')",
    "language": "python",
-   "name": "pythondata38"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -496,8 +360,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.13"
   },
+  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "7113e3970f98a4d04de61aad7e2a4e99472b30f3b9a9e79f0555aab5ccdb8ff2"
