--- a/working.ipynb
+++ b/working.ipynb
@@ -90,7 +90,7 @@
     "trim_crops = crops.loc[(crops['Year']>1979)]\n",
     "trim_crops.to_csv(\"../project_2_whats_for_breakfast/data/trimmed_crops.csv\")\n",
     "trimmed_crops_df = trim_crops.copy()\n",
-    "trimmed_crops_df.head()\n"
+    "trimmed_crops_df.head()"
    ]
   },
   {
@@ -103,7 +103,7 @@
     "trim_livestock = livestock.loc[(livestock['Year']>1979)]\n",
     "trim_livestock.to_csv(\"../project_2_whats_for_breakfast/data/trimmed_livestock.csv\")\n",
     "trimmed_livestock_df = trim_livestock.copy()\n",
-    "trimmed_crops_df.head()"
+    "trimmed_livestock_df.head()"
    ]
   },
   {
@@ -116,7 +116,7 @@
     "crop_items = trimmed_crops_df[['Item', 'Element']].copy()\n",
     "crop_items_dim = pd.DataFrame(crop_items, columns=['Item', 'Element'])\n",
     "crop_items_dim = crop_items_dim.drop_duplicates()\n",
-    "crop_items_dim\n"
+    "crop_items_dim"
    ]
   },
   {
@@ -188,7 +188,7 @@
     "port = 5432\n",
     "db_name = 'captain_crunch'\n",
     "rds_connection_string = f'{protocol}://{username}:{password}@{host}:{port}/{db_name}'\n",
-    "engine = create_engine(rds_connection_string)\n"
+    "engine = create_engine(rds_connection_string)"
    ]
   },
   {
@@ -309,12 +309,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#As the columns of the population dataframe are strings, in order to melt the years we want, we create a list from the\n",
+    "## year dataframe year column, convert that to a string, and use that in our .melt method \n",
+    "year_list = year['year'].values.tolist()\n",
+    "year_str = [str(i) for i in year_list]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Tidy up Population\n",
     "population_df = pd.read_csv(\"../project_2_whats_for_breakfast/data/pop1.csv\")\n",
     "population_df.copy()\n",
     "population_df.rename(columns={'Country Name':'country', 'Country Code':'country_code'}, inplace=True)\n",
     "population = pd.merge(population_df, countries_df, how='inner', on='country')\n",
-    "population"
+    "population.rename(columns={'country_code_x':'country_code'}, inplace=True)\n",
+    "population = population.dropna(how='any')"
    ]
   },
   {
@@ -324,12 +337,19 @@
    "outputs": [],
    "source": [
     "# Use melt to transpose certain columns\n",
-    "population.rename(columns={'country_code_x':'country_code'}, inplace=True)\n",
-    "population\n",
-    "# population = population.melt(\n",
-    "#         id_vars=['country', 'country_code'], value_vars=None, var_name='year', value_name='population'\n",
-    "#     )\n",
-    "# population\n"
+    "population = population.melt(\n",
+    "         id_vars=['country', 'country_code'], value_vars=year_str, var_name='year', value_name='population'\n",
+    "     )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Convert the years into int in preperation for database loading. \n",
+    "population['year']=population['year'].astype(int)"
    ]
   },
   {
@@ -339,16 +359,15 @@
    "outputs": [],
    "source": [
     "#Push Population to tbl_population\n",
-    "\n",
     "population.to_sql(name='tbl_population', con=engine, if_exists='append', index=False)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('Python38')",
+   "display_name": "PythonData38",
    "language": "python",
-   "name": "python3"
+   "name": "pythondata38"
   },
   "language_info": {
    "codemirror_mode": {
@@ -360,9 +379,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "7113e3970f98a4d04de61aad7e2a4e99472b30f3b9a9e79f0555aab5ccdb8ff2"
